--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,9 @@
-
+<%= form_for @product do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.label :descripion %>
+  <%= f.text_field :description %>
+  <%= f.label :inventory %>
+  <%= f.text_field :inventory %>
+  <%= f.submit "Create Product" %>
+<% end %>
